--- a/gestion/ofertas/generator.html
+++ b/gestion/ofertas/generator.html
@@ -3,59 +3,42 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Crear Oferta - GastroSat</title>
+    <title>Generar PDF - GastroSat</title>
 
     <!-- Firebase SDK -->
     <script src="https://www.gstatic.com/firebasejs/10.11.0/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/10.11.0/firebase-auth-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/10.11.0/firebase-firestore-compat.js"></script>
 
+    <!-- jsPDF para generar PDF -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+
     <style>
-        body { font-family: Arial, sans-serif; max-width: 500px; margin: auto; padding: 20px; text-align: center; }
-        input, select, textarea, button { width: 100%; padding: 10px; margin: 5px 0; font-size: 16px; border-radius: 12px; border: 1px solid #ddd; }
-        button { background-color: #007BFF; color: white; cursor: pointer; transition: 0.3s; }
+        body { font-family: Arial, sans-serif; max-width: 600px; margin: auto; padding: 20px; text-align: center; }
+        #oferta-detalle { text-align: left; border: 1px solid #ddd; padding: 20px; border-radius: 12px; background: #f9f9f9; margin-top: 20px; }
+        button { background-color: #007BFF; color: white; padding: 10px; border: none; border-radius: 12px; cursor: pointer; margin-top: 20px; }
         button:hover { background-color: #0056b3; }
-        #generar-pdf { display: none; } /* 🔹 Oculto hasta que se guarde una oferta */
     </style>
 </head>
 <body>
 
-    <h2>Crear Nueva Oferta</h2>
-    <button onclick="window.location.href='index.html'">🔙 Volver</button>
+    <h2>Vista Previa de la Oferta</h2>
+    <button onclick="window.history.back()">🔙 Volver</button>
 
-    <form id="oferta-form">
-        <label>Cliente:</label>
-        <select id="oferta-cliente" onchange="autocompletarCliente()"></select>
+    <div id="oferta-detalle">
+        <p><strong>ID:</strong> <span id="oferta-id"></span></p>
+        <p><strong>Cliente:</strong> <span id="oferta-nombre"></span></p>
+        <p><strong>Nombre Fiscal:</strong> <span id="oferta-nombre-fiscal"></span></p>
+        <p><strong>Dirección:</strong> <span id="oferta-direccion"></span></p>
+        <p><strong>CIF:</strong> <span id="oferta-cif"></span></p>
+        <p><strong>Fecha:</strong> <span id="oferta-fecha"></span></p>
+        <p><strong>Descripción:</strong></p>
+        <p id="oferta-descripcion"></p>
+        <p><strong>Importe Total:</strong> <span id="oferta-importe"></span> €</p>
+        <p><strong>Estado:</strong> <span id="oferta-estado"></span></p>
+    </div>
 
-        <label>Nombre:</label>
-        <input type="text" id="oferta-nombre" readonly>
-
-        <label>Nombre Fiscal:</label>
-        <input type="text" id="oferta-nombre-fiscal" readonly>
-
-        <label>Dirección:</label>
-        <input type="text" id="oferta-direccion" readonly>
-
-        <label>CIF:</label>
-        <input type="text" id="oferta-cif" readonly>
-
-        <label>Descripción de la Oferta:</label>
-        <textarea id="oferta-descripcion" rows="3"></textarea>
-
-        <label>Importe Total (€):</label>
-        <input type="number" id="oferta-importe" step="0.01">
-
-        <label>Estado:</label>
-        <select id="oferta-estado">
-            <option value="Pendiente">Pendiente</option>
-            <option value="Aceptada">Aceptada</option>
-            <option value="Rechazada">Rechazada</option>
-        </select>
-
-        <button type="button" onclick="guardarOferta()">💾 Guardar Oferta</button>
-    </form>
-
-    <button id="generar-pdf" onclick="generarPDF()">📄 Generar PDF</button>
+    <button onclick="generarPDF()">📄 Descargar PDF</button>
 
     <script>
         // 🔹 Verifica si Firebase ya está inicializado antes de usarlo
@@ -75,89 +58,71 @@
         // 🔹 Inicializar Firestore y Auth
         const db = firebase.firestore();
         const auth = firebase.auth();
-        let ofertaIdGuardada = null; // Guardará la ID de la oferta creada
 
-        // 🔹 Esperar autenticación antes de cargar datos
-        auth.onAuthStateChanged(user => {
-            if (user) {
-                console.log("✅ Usuario autenticado:", user.email);
-                cargarClientes();
-            } else {
-                console.error("❌ Usuario no autenticado, redirigiendo...");
-                window.location.href = "index.html"; 
-            }
-        });
+        // 🔹 Obtener `ofertaId` de la URL
+        const urlParams = new URLSearchParams(window.location.search);
+        const ofertaId = urlParams.get("ofertaId");
 
-        // 🔹 Cargar clientes en el selector
-        function cargarClientes() {
-            const clienteSelect = document.getElementById("oferta-cliente");
-            db.collection("clientes").get().then(snapshot => {
-                snapshot.forEach(doc => {
-                    const cliente = doc.data();
-                    const option = document.createElement("option");
-                    option.value = doc.id;
-                    option.textContent = `${cliente.nombre} (${cliente.cif})`;
-                    clienteSelect.appendChild(option);
-                });
-            }).catch(error => console.error("❌ Error al cargar clientes:", error));
-        }
-
-        // 🔹 Autocompletar datos del cliente seleccionado
-        function autocompletarCliente() {
-            const clienteId = document.getElementById("oferta-cliente").value;
-            if (!clienteId) return;
-
-            db.collection("clientes").doc(clienteId).get().then(doc => {
-                if (doc.exists) {
-                    const cliente = doc.data();
-                    document.getElementById("oferta-nombre").value = cliente.nombre;
-                    document.getElementById("oferta-nombre-fiscal").value = cliente.nombreFiscal;
-                    document.getElementById("oferta-direccion").value = cliente.direccion;
-                    document.getElementById("oferta-cif").value = cliente.cif;
-                }
-            });
-        }
-
-        // 🔹 Guardar Oferta en Firestore
-        function guardarOferta() {
-            const clienteId = document.getElementById("oferta-cliente").value;
-            const nombre = document.getElementById("oferta-nombre").value;
-            const nombreFiscal = document.getElementById("oferta-nombre-fiscal").value;
-            const direccion = document.getElementById("oferta-direccion").value;
-            const cif = document.getElementById("oferta-cif").value;
-            const descripcion = document.getElementById("oferta-descripcion").value;
-            const importe = document.getElementById("oferta-importe").value;
-            const estado = document.getElementById("oferta-estado").value;
-
-            if (!clienteId || !descripcion || !importe) {
-                alert("❌ Completa todos los campos obligatorios.");
+        // 🔹 Cargar y mostrar la oferta
+        function cargarOferta() {
+            if (!ofertaId) {
+                alert("❌ No se encontró una oferta válida.");
+                window.history.back();
                 return;
             }
 
-            const fecha = new Date().toISOString().split("T")[0];
-            const ofertaId = `OF-${fecha.replace(/-/g, "")}-${Math.floor(1000 + Math.random() * 9000)}`;
+            db.collection("ofertas").doc(ofertaId).get()
+            .then(doc => {
+                if (!doc.exists) {
+                    alert("❌ La oferta no existe.");
+                    window.history.back();
+                    return;
+                }
 
-            db.collection("ofertas").doc(ofertaId).set({
-                ofertaId, clienteId, nombre, nombreFiscal, direccion, cif, fecha, descripcion, importe: parseFloat(importe), estado
+                const oferta = doc.data();
+                document.getElementById("oferta-id").textContent = oferta.ofertaId;
+                document.getElementById("oferta-nombre").textContent = oferta.nombre;
+                document.getElementById("oferta-nombre-fiscal").textContent = oferta.nombreFiscal;
+                document.getElementById("oferta-direccion").textContent = oferta.direccion;
+                document.getElementById("oferta-cif").textContent = oferta.cif;
+                document.getElementById("oferta-fecha").textContent = oferta.fecha;
+                document.getElementById("oferta-descripcion").textContent = oferta.descripcion;
+                document.getElementById("oferta-importe").textContent = oferta.importe;
+                document.getElementById("oferta-estado").textContent = oferta.estado;
             })
-            .then(() => {
-                alert("✅ Oferta guardada correctamente.");
-                ofertaIdGuardada = ofertaId;
-                document.getElementById("generar-pdf").style.display = "block"; // 🔹 Mostrar botón PDF
-            })
-            .catch(error => {
-                console.error("❌ Error al guardar la oferta:", error);
-            });
+            .catch(error => console.error("❌ Error al cargar la oferta:", error));
         }
 
-        // 🔹 Redirigir a generator.html con la oferta recién creada
+        // 🔹 Generar y descargar PDF
         function generarPDF() {
-            if (ofertaIdGuardada) {
-                window.location.href = `generator.html?ofertaId=${ofertaIdGuardada}`;
-            } else {
-                alert("❌ Primero debes guardar la oferta.");
-            }
+            const { jsPDF } = window.jspdf;
+            const doc = new jsPDF();
+
+            doc.setFontSize(16);
+            doc.text("Oferta - GastroSat", 20, 20);
+
+            doc.setFontSize(12);
+            doc.text(`ID: ${document.getElementById("oferta-id").textContent}`, 20, 30);
+            doc.text(`Cliente: ${document.getElementById("oferta-nombre").textContent}`, 20, 40);
+            doc.text(`Nombre Fiscal: ${document.getElementById("oferta-nombre-fiscal").textContent}`, 20, 50);
+            doc.text(`Dirección: ${document.getElementById("oferta-direccion").textContent}`, 20, 60);
+            doc.text(`CIF: ${document.getElementById("oferta-cif").textContent}`, 20, 70);
+            doc.text(`Fecha: ${document.getElementById("oferta-fecha").textContent}`, 20, 80);
+            doc.text(`Estado: ${document.getElementById("oferta-estado").textContent}`, 20, 90);
+            
+            // 🔹 Descripción en varias líneas
+            const descripcion = document.getElementById("oferta-descripcion").textContent;
+            const splitDescripcion = doc.splitTextToSize(descripcion, 160);
+            doc.text("Descripción:", 20, 100);
+            doc.text(splitDescripcion, 20, 110);
+
+            doc.text(`Importe Total: ${document.getElementById("oferta-importe").textContent} €`, 20, 150);
+
+            doc.save(`Oferta_${document.getElementById("oferta-id").textContent}.pdf`);
         }
+
+        // 🔹 Cargar oferta al abrir la página
+        window.onload = cargarOferta;
     </script>
 </body>
 </html>
