--- a/gestion/ofertas/generator.html
+++ b/gestion/ofertas/generator.html
@@ -100,7 +100,7 @@
 
             // 🔹 Logo de la empresa
             const img = new Image();
-            img.src = "/logo5.svg"; // Ruta del logo
+            img.src = "/logov5.svg"; // Ruta del logo
 
             img.onload = function () {
                 doc.addImage(img, "SVG", 20, 15, 50, 20);
