--- a/gestion/ofertas/generator.html
+++ b/gestion/ofertas/generator.html
@@ -100,10 +100,10 @@
 
             // 🔹 Logo de la empresa
             const img = new Image();
-            img.src = "/logov5.svg"; // Ruta del logo
+            img.src = "/logov5.jpg"; // Ruta del logo
 
             img.onload = function () {
-                doc.addImage(img, "SVG", 20, 15, 50, 20);
+                doc.addImage(img, "jpg", 20, 15, 50, 20);
 
                 // 🔹 Datos de la empresa (4 líneas reservadas)
                 doc.setFontSize(12);
